Fix: Close button in responsive Contact Card is now visible. Enlarged the size of the add button on Board page.

--- a/styles/button.css
+++ b/styles/button.css
@@ -163,7 +163,6 @@
 
 .btn_close_modal {
     display: flex;
-    /* align-items: flex-end; */
     justify-content: space-evenly;
     width: 28px;
     height: 28px;
@@ -172,9 +171,8 @@
     background: transparent;
     cursor: pointer;
     transition: background 120ms ease;
-    /* padding-top: 1px;
-    padding-left: 1px; */
     font-size: 30px;
+    outline: none;
 }
 
 .btn_close_modal:hover {
